incorporate PM review

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
@@ -97,8 +97,10 @@ The following is an example classpath entry that denotes the class file folder '
     new Path(&quot;d:/lib/foo_src.zip&quot;), //source archive location
     new Path(&quot;src&quot;), //source archive root path
     true); //exported
-	</pre></font>
-</li>
+	</pre></font><p>The source archive root path describes the location of the
+  root within the source archive.&nbsp; If set to null, the root of the archive
+  will be inferred dynamically.</p>
+  </li>
 <li><b>a prerequisite project</b> - another Java project.&nbsp; A prerequisite project always contributes its source folders to dependent projects.
 It can also optionally contribute any of its classpath entries which are tagged as exported (see factory methods supporting
   the extra boolean argument 'isExported').
@@ -189,7 +191,11 @@ certain resources in a source folder from being visible on the classpath.&nbsp;
 Using a pattern allows
 specified portions of the resource tree to be filtered out.&nbsp; Each exclusion
 pattern path is relative to the classpath entry and uses a pattern mechanism
-similar to Ant.&nbsp; See <b><a href="../reference/api/org/eclipse/jdt/core/IClasspathEntry.html#getExclusionPatterns()">getExclusionPatterns()</b></a> for details.</p>
+similar to Ant.&nbsp; Exclusion patterns can be used to specify nested source
+folders as long as the outer pattern excludes the inner pattern.</p>
+
+<p> See <b><a href="../reference/api/org/eclipse/jdt/core/IClasspathEntry.html#getExclusionPatterns()">getExclusionPatterns()</b></a> for
+more detail on exclusion patterns.</p>
 
 <p>
 The Java project API <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#isOnClasspath(IResource)">isOnClasspath</a>
