--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
@@ -88,13 +88,18 @@ accept class completions.</p>
    
    // Compute proposals
    unit.codeComplete(offset, requestor);</font>
-</pre><p>Because there may be many different possible completions, the notion of
+</pre><h4>Completion relevance
+</h4>
+
+<p>Because there may be many different possible completions, the notion of
 relevance is used to compare the relevance of a suggested completion to other
 proposals.&nbsp; Relevance is represented by a positive integer.&nbsp; The value
 has no implicit meaning except to be used relative to the value for other
 proposals.&nbsp; The relevance of a code completion candidate can be affected by
-the expected type of the expression (based on casts and variable types) and the
-expected name of the expression (based on expected prefixes and suffixes).
+the expected type of the expression, as it relates to the types in the
+surrounding code, such as variable types, cast types, return types, etc.&nbsp;
+The presence of an expected prefix or suffix in a completion also affects its
+relevance.
 </p>
 
 <H4>
@@ -115,8 +120,11 @@ completion.&nbsp; These options can be changed by other plugins.&nbsp;&nbsp;</P>
 
 <p>Additional options allow you to specify prefixes and suffixes for the
 proposed completion names for fields, static fields, local variables, and method
-arguments.&nbsp; See <a href="../guide/jdt_api_options.htm"> Manipulating JDT Core options</a>
-for more information about options.</p>
+arguments.&nbsp;&nbsp;</p>
+
+<p> See&nbsp;<a href="jdt_api_options.htm##codeassist"> JDT Core Code Assist
+Options</a>
+for more information about the code assist options and their defaults.</p>
 
 <H3>
 Code selection</h3>
