--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../book.css">
 </head>
 <body>
-<h2>Programmatically writing a Jar file</h2>
+<h2>Writing Jar files</h2>
 <p> The <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/package-summary.html"> 
   <b> 
   org.eclipse.ui.jarpackager</b></a> package provides utility classes to programmatically 
