--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_render.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_render.htm
@@ -48,6 +48,12 @@ also supports <a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html">
       IPackageFragmentRoot</b></a>, <a href="../reference/api/org/eclipse/jdt/core/IPackageFragment.html"><b> 
       IPackageFragment</b></a>, and <b>IFolder</b> as input elements: 
 </p>
+<h3>Overlaying images with Java information</h3>
+        <p><a href="../reference/api/org/eclipse/jdt/ui/JavaElementImageDescriptor.html"><b> 
+    JavaElementImageDescriptor</b></a> can be used to create an image based on an 
+    arbitrary base image descriptor and a set of flags specifying which Java specific 
+    adornments (e.g. static, final, synchronized, ....) are to be superimposed 
+    on the image.</p>
 <h3>Adding problem and override decorators</h3>
 When a viewer is supposed to include problem annotations, the JFace <b>DecoratingLabelProvider</b> 
 together with the <a href="../reference/api/org/eclipse/jdt/ui/ProblemsLabelDecorator.html"> 
@@ -99,6 +105,10 @@ ProblemsLabelDecorator</b></a>: the client should listen to changes
   of the elements presented in the viewer then the client should update the viewer 
   using the standard JFace API (see refresh methods on StructuredViewer, and the 
   add and remove methods on TableViewer and AbstractTreeViewer). </p>
+<h3>Sorting the viewer</h3>
+<p> <a href="../reference/api/org/eclipse/jdt/ui/JavaElementSorter.html"><b> 
+    JavaElementSorter</b></a> can be plugged into a JFace viewer to sort Java elements 
+    according to the Java UI sorting style. </p>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."> 
   </a> </p>
 </body>
