--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_utility.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_utility.htm
@@ -9,8 +9,10 @@
 </head>
 <body>
 <h2>JavaUI utilities</h2>
-<p>The <b><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"> 
-  JavaUI</a></b> class contains many utility methods that allow you to programmatically invoke the JDT user interface.</p>
+<p><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"><b>JavaUI</b></a> 
+    is the main access point to the Java user interface components. It allows 
+    you to programmatically open editors on Java elements, open a Java or Java 
+    Browsing perspective,&nbsp; and open package and type prompter dialogs. </p>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."> 
   </a> </p>
 </body>
