--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_write_jar_file.htm
@@ -37,6 +37,8 @@
   and to save the content of the <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html"><b>JarPackageData</b></a>
 object to a corresponding Jar 
   description file.</p>
+<p> Once the JAR is described by a <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html"><b>JarPackageData</b></a>,
+it can be programmatically written using a <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarWriter.html"><b>JarWriter</b></a>.</p>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."> 
   </a> </p>
 </body>
