--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_core.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_core.htm
@@ -15,28 +15,31 @@ developing Java specific features.</p>
 <p> JDT Core packages give you access to the Java model objects and headless
 Java IDE infrastructure.&nbsp; The JDT Core packages include:</p>
 <ul>
-  <li><b><a href="../reference/api/org/eclipse/jdt/core/package-summary.html">org.eclipse.jdt.core</a>
-    </b>defines the classes that describe the Java model.
+  <li><b><a href="../reference/api/org/eclipse/jdt/core/package-summary.html">org.eclipse.jdt.core</a></b>
+    - defines the classes that describe the Java model.
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/core/compiler/package-summary.html">org.eclipse.jdt.core.compiler</a>
-    </b>defines API for the compiler infrastructure.
+    </b> - defines API for the compiler infrastructure.
   </li>
-  <li><b><a href="../reference/api/org/eclipse/jdt/core/dom/package-summary.html">org.eclipse.jdt.core.dom</a> </b> supports Abstract Syntax Trees (AST) that 
+  <li><b><a href="../reference/api/org/eclipse/jdt/core/dom/package-summary.html">org.eclipse.jdt.core.dom</a> </b>
+    - supports Abstract Syntax Trees (AST) that 
     can be used for examining the structure of a compilation unit down to the 
     statement level.
   </li>
-  <li><b><a href="../reference/api/org/eclipse/jdt/core/eval/package-summary.html">org.eclipse.jdt.core.eval</a> </b> supports
+  <li><b><a href="../reference/api/org/eclipse/jdt/core/eval/package-summary.html">org.eclipse.jdt.core.eval</a></b>
+    - supports
     the evaluation of code snippets in a scrapbook or inside the debugger.
   </li>
   <li><a href="../reference/api/org/eclipse/jdt/core/jdom/package-summary.html"><b> 
-    org.eclipse.jdt.core.jdom</b></a> supports a Java Document Object Model (DOM) 
+    org.eclipse.jdt.core.jdom</b></a> - supports a Java Document Object Model (DOM) 
     that can be used for walking the structure of a Java compilation unit.
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/core/search/package-summary.html"> 
-    org.eclipse.jdt.core.search</a> </b> supports searching the workspace's Java
+    org.eclipse.jdt.core.search</a></b> - supports searching the workspace's Java
     model for Java elements match a particular description.&nbsp;&nbsp;
   </li>
-  <li><b><a href="../reference/api/org/eclipse/jdt/core/util/package-summary.html">org.eclipse.jdt.core.util</a> </b> provides
+  <li><b><a href="../reference/api/org/eclipse/jdt/core/util/package-summary.html">org.eclipse.jdt.core.util</a>
+    </b>- provides
     utility classes for manipulating .class files and Java model elements.
   </li>
 </ul>
