--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
@@ -15,97 +15,39 @@ the Java-specific extensions to the workbench.&nbsp;&nbsp;&nbsp; The JDT UI
 packages include:</p>
 <ul>
   <li>
-    <p>
     <b><a href="../reference/api/org/eclipse/jdt/ui/package-summary.html"> org.eclipse.jdt.ui</a> 
-    </b>provides support classes for presenting Java elements in the user interface.
-    Although this package contains many classes, knowledge of just a few classes
-    can get you started:</p>
-    <ul>
-      <li>
-        <p><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"><b>JavaUI</b></a> 
-    is the main access point to the Java user interface components. It allows 
-    you to programmatically open editors on Java elements, open a Java or Java 
-    Browsing perspective and open package and type prompter dialogs. The package 
-    exposes constants for retrieving Java user interface parts from the workbench 
-    registry and for retrieving preference settings from the Java preferences.</p>
-      </li>
-      <li>
-        <p> <a href="../reference/api/org/eclipse/jdt/ui/IWorkingCopyManager.html"> 
-    <b>IWorkingCopyManager</b></a> manages the working copies that are in use for 
-    Java compilation units.</p>
-      </li>
-      <li>
-        <p><a href="../reference/api/org/eclipse/jdt/ui/ITypeHierarchyViewPart.html"><b>ITypeHierarchyViewPart</b></a> <b>
-        </b> and <a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html"> 
+    </b> - provides support classes for presenting Java elements in the user
+    interface.&nbsp; This package exposes constants for retrieving Java user interface parts from the workbench 
+    registry and for retrieving preference settings from the Java preferences.&nbsp;
+    Programming interfaces <a href="../reference/api/org/eclipse/jdt/ui/ITypeHierarchyViewPart.html"><b>ITypeHierarchyViewPart</b></a> and <a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html"> 
     <b> 
-    IPackagesViewPart</b></a> define the programming interface that interacts with 
-    the type hierarchy and packages view parts.</p>
-      </li>
-      <li>
-        <p><a href="../reference/api/org/eclipse/jdt/ui/StandardJavaElementContentProvider.html"><b> 
-    StandardJavaElementContentProvider</b></a> and <a href="../reference/api/org/eclipse/jdt/ui/JavaElementLabelProvider.html"> 
-    <b> 
-    JavaElementLabelProvider</b></a> support the presentation of Java elements in 
-    JFace viewers. <a href="../reference/api/org/eclipse/jdt/ui/JavaElementSorter.html"> 
-    <b> 
-    JavaElementSorter</b></a> can be plugged into a JFace viewer to sort Java elements 
-    according to the Java UI sorting style.</p>
-      </li>
-      <li>
-        <p><a href="../reference/api/org/eclipse/jdt/ui/JavaElementImageDescriptor.html"><b> 
-    JavaElementImageDescriptor</b></a> can be used to create an image based on an 
-    arbitrary base image descriptor and a set of flags specifying which Java specific 
-    adornments (e.g. static, final, synchronized, ....) are to be superimposed 
-    on the image.</p>
-      </li>
-    </ul>
+    IPackagesViewPart</b></a> are provided for interacting with Java views.
   </li>
-  <li><b><a href="../reference/api/org/eclipse/jdt/ui/actions/package-summary.html"> 
-    org.eclipse.jdt.ui.actions</a> </b>provides actions and action groups to populate 
-    tool bars, global menu bars and context menus with JDT specific functionality. 
-    It is recommended that clients use action groups to populate menus and tool 
-    bars instead of adding actions directly. This shields clients from missing 
-    newly added actions or from using outdated menu structures.<br>
+  <li>
+    <b><a href="../reference/api/org/eclipse/jdt/ui/actions/package-summary.html">org.eclipse.jdt.ui.actions</a> 
+    </b>- provides actions and action groups to populate 
+    tool bars, global menu bars and context menus with JDT specific functionality.
+    You should use action groups to populate menus and tool 
+    bars instead of adding actions directly. This shields you from missing 
+    newly added actions or from using outdated menu structures.
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/jarpackager/package-summary.html"> 
-    org.eclipse.jdt.ui.jarpackager</a> </b>provides classes and interfaces to 
-    generate a JAR file. It offers hooks to extend <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarPackageData.html"> 
-    <b> 
-    JarPackageData</b></a> to load and store the data and to write the JAR
-    itself using a <a href="../reference/api/org/eclipse/jdt/ui/jarpackager/JarWriter.html"><b>JarWriter</b></a>.<br>
+    org.eclipse.jdt.ui.jarpackager</a> </b> - provides classes and interfaces to 
+    generate a JAR file.
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/package-summary.html"> 
-    org.eclipse.jdt.ui.text</a> </b>provides support classes for presenting Java 
-    text.&nbsp;<br>
-    <ul>
-      <li> <a href="../reference/api/org/eclipse/jdt/ui/text/JavaTextTools.html"> 
-    <b> 
-    JavaTextTools</b></a> provides access to the different scanners to partition and 
-    color Java source code.<br>
-      </li>
-      <li> <a href="../reference/api/org/eclipse/jdt/ui/text/JavaSourceViewerConfiguration.html"> 
-    <b>JavaSourceViewerConfiguration</b></a> defines a standard configuration for a Java 
-    source viewer.<br>
-      </li>
-    </ul>
+    org.eclipse.jdt.ui.text</a> </b> - provides support classes for presenting Java 
+    text.&nbsp;
   </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/java/hover/package-summary.html"> 
-    org.eclipse.jdt.ui.text.java.hover</a> </b>provides implentations for presenting 
-    text hovers in Java editors.&nbsp;<br>
-    <br>
- The interface <a href="../reference/api/org/eclipse/jdt/ui/text/java/hover/IJavaEditorTextHover.html"> 
-    <b> 
-    IJavaEditorTextHover</b></a> defines the programming interface for a text hover. 
-    See extension point <a href="../reference/extension-points/org_eclipse_jdt_ui_javaEditorTextHovers.html"> 
-    <b> 
-    org.eclipse.jdt.ui.javaEditorTextHovers</b></a> for instructions on how to define 
-    a new Java text hover.<br>
+    org.eclipse.jdt.ui.text.java.hover</a> </b> - provides implementations for presenting 
+    text hovers in Java editors.&nbsp;
   </li>
-  <li><b><a href="../reference/api/org/eclipse/jdt/ui/wizards/package-summary.html"> 
-    org.eclipse.jdt.ui.wizards</a> </b>provides wizard pages for creating Java 
-    elements. Supported elements are projects, packages, classes and interfaces. 
-    The class&nbsp;<a href="../reference/api/org/eclipse/jdt/ui/wizards/JavaCapabilityConfigurationPage.html"><b>JavaCapabilityConfigurationPage</b></a> supports editing the Java build settings 
-    (source folder setup, referenced projects and, referenced and exported libraries).
+  <li><a href="../reference/api/org/eclipse/jdt/ui/wizards/package-summary.html"> 
+    <b> 
+    org.eclipse.jdt.ui.wizards</b></a>  - provides wizard pages for creating and
+    configuring Java 
+    elements.
   </li>
 </ul>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif"  alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."> 
