Added initial documentation for linked resources

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
@@ -11,11 +11,9 @@
 <H1 CLASS="Head">
 Resources</H1>
 <p CLASS="Head">
-<i>Resources</i> is a collective term for projects, packages, folders, and files
+<i>Resources</i> is a collective term for the projects, folders, and files
 that exist in the Workbench. The Navigator view provides a hierarchical view of resources and allows you to open
-them for editing. Other tools may
-display and handle these
-resources differently.&nbsp;</p>
+them for editing. Other tools may display and handle these resources differently.&nbsp;</p>
 <p CLASS="Head">There are three basic types of resources that exist in the
 Workbench:</p>
 <dl>
@@ -48,16 +46,16 @@ Navigator view<br>
 Builds</a></p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-53.htm"><br>
-Importing resources into the Workbench
-</a><a href="../tasks/tasks-42.htm"><br>
-Creating a project</a><a href="../tasks/tasks-43.htm"><br>
-Creating a folder</a><a href="../tasks/tasks-44.htm"><br>
-Creating a file</a><a href="../tasks/tasks-53.htm"><br>
-</a><a href="../tasks/tasks-47.htm">Closing projects</a><a href="../tasks/tasks-49.htm"><br>
-Viewing resource properties</a><a href="../tasks/tasks-46ag.htm"><br>
-Finding a resource quickly</a><a href="../tasks/tasks-63cg.htm"><br>
-Copying resources</a><br>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<a href="../tasks/tasks-53.htm"><br>Importing resources into the Workbench</a>
+<a href="../tasks/tasks-42.htm"><br>Creating a project</a>
+<a href="../tasks/tasks-43.htm"><br>Creating a folder</a>
+<a href="../tasks/tasks-44.htm"><br>Creating a file</a>
+<a href="../tasks/tasks-45.htm">Creating linked resources</a><br>
+<a href="../tasks/tasks-47.htm">Closing projects</a>
+<a href="../tasks/tasks-49.htm"><br>Viewing resource properties</a>
+<a href="../tasks/tasks-46ag.htm"><br>Finding a resource quickly</a>
+<a href="../tasks/tasks-63cg.htm"><br>Copying resources</a><br>
 <a href="../tasks/tasks-63.htm">Moving resources</a><br>
 <a href="../tasks/tasks-68.htm">Comparing resources</a>
 </p>
