updated interoperability section with info on source attachments, jdt preferences, and pde classpath containers

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -12,7 +12,7 @@
 
 <h1>Eclipse Project Release Notes</h1>
 <p><b>DRAFT </b>Pre-release 2.1.0<br>
-Last revised March 6, 2003</p>
+Last revised March 12, 2003</p>
 <p align="left"><strong>This software is OSI Certified Open Source Software.<br>
 OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</strong></p>
 <blockquote>
@@ -1481,17 +1481,33 @@ issues with the Eclipse SDK.</p>
   <li>Optional exclusion patterns on Java source entries on the build class
     path. This support was added in 2.1. This information is recorded in the
     project's <code>.classpath</code> file. Recommendation: do not specify
-    exclusion patterns.</li>
+    exclusion patterns.&nbsp; Better still, disable exclusion patterns via the<b>
+    Java / Compiler / Build Path</b>&nbsp; preference page.</li>
   <li>Output folders associated with Java source entries on the build class
     path. This support was added in 2.1. This information is recorded in the
     project's <code>.classpath</code> file. Recommendation: do not specify
-    anything other than the default (project-wide) output folder.</li>
+    anything other than the default (project-wide) output folder.&nbsp; Better
+    still, disable multiple output locations via the<b> Java / Compiler / Build
+    Path</b>&nbsp; preference page.</li>
+  <li>Source attachment root path.&nbsp; There is a UI for setting the source
+    root path for a JAR in 2.0 (e.g. &quot;src/&quot;).&nbsp; This value is
+    inferred in 2.1, and not recorded in the project's <code>.classpath</code> 
+    file.&nbsp; Therefore, a 2.0 workspace (possibly) not find the attached
+    source. Recommendation: Use 2.0 to specify the source attachment root
+    path.&nbsp; There is additional source attachment flexibility provided in
+    2.1: you can provide a folder instead of a JAR or zip as a source
+    attachment, and you can attach source to a class file folder; this
+    functionality is not available in 2.0 (where the 2.1 information is
+    ignored).&nbsp; Recommendation: Use 2.0 to specify the source attachment.</li>
   <li>PDE classpath containers for dependent plug-ins. PDE's use of classpath
     containers was added in 2.1. Classpath containers are recorded in the
-    project's <code>.classpath</code> file. Recommendation: Ensure that the
+    project's <code>.classpath</code> file. If PDE classpath containers are
+    used, then a 2.0 workspace will have unresolved classpath entries and
+    therefore most Java capabilities (including compilation, search, run, debug)
+    will not produce the expected results. Recommendation: Ensure that the
     setting on the <b>Plug-in Development / Java Build Path Control </b>preference
     page for using classpath containers is disabled before creating any plug-in
-    (or fragment) projects.</li>
+    (or fragment) projects.&nbsp;</li>
   <li>PDE extension point schemas. This support was added in 2.1. This
     information is recorded in the plug-in project's <code>plugin.xml</code> (or
     <code>fragment.xml</code>) file. Recommendation: do not use extension point
