Fix for bug 23519: added -showlocation parameter

--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -198,6 +198,13 @@ The general form of running the Eclipse executable is:</p>
       <TD width="2%" height="16">*1.0</TD>
     </TR>
     <TR> 
+      <TD vAlign=top width="33%" height="16"><pre><b>-showlocation</b> </pre></TD>
+      <TD width="65%" height="16">Option for displaying the location of the workspace
+      in the window title bar.  In release 2.0 this option only worked in conjunction with
+      the -data command line argument.</TD>
+      <TD width="2%" height="16">2.0</TD>
+    </TR>
+    <TR> 
       <TD vAlign=top width="33%" height="16"><pre><b>-showsplash</b> <var>params</var></pre></TD>
       <TD width="65%" height="16">Internal option for showing the splash screen 
         (done by the executable Eclipse platform launcher). This option has 
