Fix for bug 24475 - typo in platform core release notes

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -620,7 +620,7 @@ of the Runtime page in the PDE plug-in manifest editor. (Further information <a 
 <h4><b>Invalid characters in install directory prevents Eclipse from starting</b></h4>
 <p>Eclipse will fail to launch if installed in a directory whose path contains
 certain invalid characters, including :%#&lt;&gt;&quot;!. The workaround is to
-install Eclipse in a directory whose path does contain invalid characters. (<a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=3109">bugs
+install Eclipse in a directory whose path does not contain invalid characters. (<a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=3109">bugs
 3109</a>, <a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=17281">17281</a>)</p>
 <h4><b>Problems with classloaders in created threads</b></h4>
 <p>There is a known issue with trying to load classes from a newly created
