--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
@@ -96,7 +96,7 @@ The following code snippet demonstrates the pattern for using these methods.</P>
    ...
    // now update the UI. We don't depend on the result,
    // so use async.
-   Display.getCurrent().asyncExec(new Runnable() {
+   Display.getDefault().asyncExec(new Runnable() {
       public void run() {
          myWindow.redraw();
       }
