Corrected reference to ant runtime pref page

--- a/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
@@ -26,7 +26,8 @@ can optionally be displayed in a structured format. Targets and tasks are shown
 in a tree hierarchy if the output structure tree is enabled in the log console.
 </P>
 <P CLASS="Para">
-You can add classes to the Ant classpath and add Ant tasks and types in the <b>Workbench->External Tools->Ant</b> preferences.
+You can add classes to the Ant classpath and add Ant tasks and types from the ant
+runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime</b>.
 </P>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
