Corrected ref to preference page

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
@@ -30,7 +30,7 @@ resources.
 </p>
 
 <dl>
-<dt><b>Compare With &gt; Latest From Repository</b></dt>
+<dt><b>Compare With &gt; Latest from Repository</b></dt>
 <dd>compares the selected resource with the version of the same resource that is
     currently committed to the active branch.</dd>
 <dt><b>Compare With &gt; Branch or Version</b></dt>
@@ -48,11 +48,12 @@ resources.
 <dt><b>Compare With &gt; Local History</b></dt>
 <dd>compares the selected resource to one that is in the local history, which
      is maintained when you save changes. (<em>Tip:</em> to configure the size
-	 and depth of your local history, select <b>Workbench &gt; Preferences</b>.)</dd>
+	 and depth of your local history, look under <b>Window &gt; Preferences
+	 &gt; Workbench &gt; Local History</b>.)</dd>
 </dl>
 
 <p><em>Tip:</em> You can customize the behavior of the comparison editor by
-selecting <b>Workbench &gt; Preferences &gt; Workbench &gt; Compare</b>
+selecting <b>Window &gt; Preferences &gt; Workbench &gt; Compare/Patch</b>
 from the main menu bar. You can select to &quot;lock scroll&quot; the pane
 contents, as well as setting options for showing conflicts with other team
 members and changing the default font.</p>
