update help documentation plugin

--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin.htm
@@ -20,7 +20,7 @@ and structure of these files is completely up to the documentation team. Once th
 <P >
 We start by assuming that the documentation has already been provided in the following tree.</P>
 <font color='#4444CC'><pre>
-   doc/
+   html/
       concepts/
          concept1.html
          concept1_1.html
