--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
@@ -23,7 +23,7 @@ update our <b> plugin.xml</b> to actually contribute the master toc.&nbsp; </P>
  initially.&nbsp; Instead of providing an <b>href</b> for each topic, we use the
  <b>link</b> attribute to refer to our existing toc files. </P>
 
-<font color='#4444CC'><pre>&lt;toc label=&quot;Online Help Sample&quot;&gt;
+<font color='#4444CC'><pre>&lt;toc label=&quot;Online Help Sample&quot; topic=&quot;html/book.html&quot;&gt;
 	&lt;topic label=&quot;Concepts&quot;&gt;
 		&lt;link toc=&quot;toc_Concepts.xml&quot; /&gt;
 	&lt;/topic&gt;
@@ -46,7 +46,9 @@ update our <b> plugin.xml</b> to actually contribute the master toc.&nbsp; </P>
 to true indicates that the toc should always appear in the navigation, even if
 it is not referenced by any other toc.&nbsp; This way, our &quot;master&quot;
 toc is always guaranteed to show up in the topics list.&nbsp; It appears at the
-top level list of books since no other toc references it.&nbsp;&nbsp; </P>
+top level list of books since no other toc references it.&nbsp;<I><BR>
+Note</I>: 
+If more files were associated with this toc but not present in the navigation, but just linked from other topics, then to have those topics available to the search engine we would have to use the <B>extradir</B> attribute in the toc.</P>
 <P >Finally, we contribute our individual toc files. </P>
 <font color='#4444CC'><pre>   &lt;extension point=&quot;org.eclipse.help.toc&quot;&gt;
        &lt;toc file=&quot;toc_Concepts.xml&quot; /&gt;
@@ -61,14 +63,10 @@ toc. </P>
 
 <P >That's it. If you copy your plug-in directory to the platform's <b> plugins</b> directory, start the platform, and choose
 <b> Help-&gt;Help Contents</b>, you should see your example appear in the list
-of books: </P>
+of books. If you click on the "Online Help Sample", you'll see your toc structure:</P>
 
-<P ><img border="0" src="images/help_books.jpg" alt="List of books with example entry" width="227" height="220"> </P>
-
-<p>&nbsp;</p>
-<p>If you click on the &quot;Online Help Sample&quot;, you'll see your toc
-structure.</p>
-<p><img border="0" src="images/help_contents.jpg" alt="On-line help browser with sample book structure" width="675" height="468"></p>
+<p></p>
+<p><img border="0" src="images/help_contents.jpg" alt="On-line help browser with sample book structure" width="700" height="533"></p>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a></p>
 
