--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_toc.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_toc.htm
@@ -37,9 +37,9 @@ Our files look like this:</P>
 <H4>toc_Concepts.xml</H4>
 <font color='#4444CC'><pre>
    &lt;toc label=&quot;Concepts&quot;&gt;
-      &lt;topic label=&quot;Concept1&quot; href=&quot;doc/concepts/concept1.html&quot;&gt;
-         &lt;topic label=&quot;Concept1_1&quot; href=&quot;doc/concepts/concept1_1.html&quot;/&gt;
-         &lt;topic label=&quot;Concept1_2&quot; href=&quot;doc/concepts/concept1_2.html&quot;/&gt;
+      &lt;topic label=&quot;Concept1&quot; href=&quot;html/concepts/concept1.html&quot;&gt;
+         &lt;topic label=&quot;Concept1_1&quot; href=&quot;html/concepts/concept1_1.html&quot;/&gt;
+         &lt;topic label=&quot;Concept1_2&quot; href=&quot;html/concepts/concept1_2.html&quot;/&gt;
       &lt;/topic&gt; 
    &lt;/toc&gt;
 </pre></font>
@@ -49,12 +49,12 @@ toc_Tasks.xml</H4>
 <font color='#4444CC'><pre>
    &lt;toc label=&quot;Tasks&quot;&gt;
       &lt;topic id=&quot;plainTasks&quot; label=&quot;Plain Stuff&quot;&gt;
-         &lt;topic label=&quot;Task1&quot; href=&quot;doc/tasks/task1.html&quot;/&gt;
-         &lt;topic label=&quot;Task2&quot; href=&quot;doc/tasks/task2.html&quot;/&gt;
+         &lt;topic label=&quot;Task1&quot; href=&quot;html/tasks/task1.html&quot;/&gt;
+         &lt;topic label=&quot;Task2&quot; href=&quot;html/tasks/task2.html&quot;/&gt;
       &lt;/topic&gt;
       &lt;topic id=&quot;funTasks&quot; label=&quot;Fun Stuff&quot; &gt;
-         &lt;topic label=&quot;Task3_1&quot; href=&quot;doc/tasks/task3_1.html&quot;/&gt;
-         &lt;topic label=&quot;Task3_2&quot; href=&quot;doc/tasks/task3_2.html&quot;/&gt;
+         &lt;topic label=&quot;Task3_1&quot; href=&quot;html/tasks/task3_1.html&quot;/&gt;
+         &lt;topic label=&quot;Task3_2&quot; href=&quot;html/tasks/task3_2.html&quot;/&gt;
       &lt;/topic&gt;
    &lt;/toc&gt;
 </pre></font>
@@ -63,8 +63,8 @@ toc_Tasks.xml</H4>
 toc_Ref.xml</H4>
 <font color='#4444CC'><pre>
    &lt;toc label=&quot;Reference&quot;&gt;
-      &lt;topic label=&quot;Ref1&quot; href=&quot;doc/ref/ref1.html&quot;/&gt;
-      &lt;topic label=&quot;Ref2&quot; href=&quot;doc/ref/ref2.html&quot;/&gt;
+      &lt;topic label=&quot;Ref1&quot; href=&quot;html/ref/ref1.html&quot;/&gt;
+      &lt;topic label=&quot;Ref2&quot; href=&quot;html/ref/ref2.html&quot;/&gt;
    &lt;/toc&gt;
 </pre></font>
 <P >
