--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_nested.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_nested.htm
@@ -25,7 +25,7 @@ convenient method for breaking up known content into smaller pieces.&nbsp; With
 top-down nesting, the <b>link</b> attribute is used in the table of contents
 definition to refer to linked tocs rather than providing an <b>href</b>.&nbsp; </p>
 
-<font color='#4444CC'><pre>&lt;toc label=&quot;Online Help Sample&quot;&gt;
+<font color='#4444CC'><pre>&lt;toc label=&quot;Online Help Sample&quot; topic=&quot;html/book.html&quot;&gt;
 	&lt;topic label=&quot;Concepts&quot;&gt;
 		&lt;link toc=&quot;toc_Concepts.xml&quot; /&gt;
 	&lt;/topic&gt;
@@ -51,7 +51,7 @@ named anchor points where other plug-ins can contribute documentation.&nbsp; In
 our example, we could add anchors so that plug-ins can contribute additional
 material between the concepts, tasks, and reference sections.</p>
 
-<font color='#4444CC'><pre>&lt;toc label=&quot;Online Help Sample&quot;&gt;
+<font color='#4444CC'><pre>&lt;toc label=&quot;Online Help Sample&quot; topic=&quot;html/book.html&quot;&gt;
 	&lt;topic label=&quot;Concepts&quot;&gt;
 		&lt;link toc=&quot;toc_Concepts.xml&quot; /&gt;
 		&lt;<b>anchor</b> id=&quot;postConcepts&quot; /&gt;
