--- a/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
@@ -22,11 +22,10 @@ designed to help you find the information you need.</p>
 <h2>The help browser</h2>
 
 <p>When you first open the help browser by selecting <b>Help &gt; Help Contents</b> 
-in the Workbench, the first view shown is called the Bookshelf. On the Bookshelf 
-are links to the various groupings of documentation for the product. Click on 
-one of the links to go to the navigation tree for that set of documentation. At 
-any time, you can return to the bookshelf by clicking the <b>Table of Contents</b> 
-button <img border="0" src="../images/bookshelf.gif" alt="Table of contents button">.</p>
+in the Workbench, the first view shown is called Contents.  Contents displays 
+various groupings of documentation for the product. Click on 
+one of the links to expand the navigation tree for that set of documentation.
+Browse the tree and click on topics to display them.</p>
 
 <h2>Search</h2>
 <p>If you want to find a particular piece of information in the online help, use
