--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -29,7 +29,7 @@ major sets of documentation available.
     the same way back and forward buttons work in an Internet browser, taking 
     you to topics you have already looked at.</li>
   <li>To synchronize the navigation frame with the current topic, click the <b>Synchronize</b> 
-    button <img border="0" src="../images/synchronize.gif" alt="Synchonize button" >. 
+    button <img border="0" src="../images/synch_toc_nav.gif" alt="Synchonize button" >. 
     This is helpful if you have followed several links to related topics in several 
     files, and want to see where the current topic fits into the navigation path.</li>
 </ol>
@@ -43,12 +43,12 @@ browser and click <b>Go</b>.
 widget and press F1. For more details, refer to the list of related topics below. 
 </p>
 
-<h2>Showing and hiding the navigation frame</h2>
+<h2>Maximizing help frames</h2>
 
-<p>To increase the space available for viewing the help content, the navigation 
-frame can be hidden.To hide the navigation frame, click the <b>Toggle Navigation</b> 
-button <img border="0" src="../images/hidenav.gif" alt="Navigation button" > 
-on the Help view's toolbar. To show it, click the button again.
+<p>To increase the space available for viewing the help content, the frame that
+displayes content can be maximized. To maximize the frame, double click its toolbar.
+To return the frame to its original size, doble click the tool bar again.
+Similarly, you can maximize the frame showing navigation, by double clicking its toolbar.
 </p>
 
 <h2>Printing online help</h2>
@@ -58,7 +58,7 @@ on the Help view's toolbar. To show it, click the button again.
 
 <ol>
   <li>Select the topic in the navigation frame.</li>
-  <li>Click the <b>Print</b> button <img border="0" src="../images/print.gif" alt="Print button" > 
+  <li>Click the <b>Print</b> button <img border="0" src="../images/printer.gif" alt="Print button" > 
     in the Help toolbar.</li>
   <li>Select the desired printer settings, and click <b>Print</b>.</li>
 </ol>
