--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -62,12 +62,18 @@
    <li>To expand/collapse a tree node, press Right/Left arrows. </li>
    <li>To move to the next topic node, press Down arrow or Tab </li>
    <li>To move to the previous topic node, press Up arrow or Shift+Tab </li>
+   <li>To display selected topic, press Enter. </li>
    <li>To scroll all the way up or down press Home or End. </li>
    <li>To go back press Alt+Left arrow; to go forward press Alt+Right arrow.
    </li>
-   <li>To go to the next frame press Ctrl+Tab. There are quite a number of 
-   frames in the help system. </li>
-   <li>To move to previous frame, press Shift+Ctrl+Tab. </li>
+   <li>To go to the next frame, or toolbar press Ctrl+Tab
+     (Ctrl+F6, if using browser based on Mozilla 1.2 or newer).</li>
+   <li>To move to previous frame, press Shift+Ctrl+Tab.
+     (Shift-Ctrl+F6, if using browser based on Mozilla 1.2 or newer).</li>
+
+   <li>To move between tabs, press Right/Left arrows.</li>
+   <li>To switch view, select a tab and press Enter.</li>
+   <li>To switch and move to a view, select a tab and press Up arrow.</li>
    <li>To print the current page or active frame, press Ctrl+P. </li>
  </ul>
 <p><img src="../../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
