*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144c.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144c.htm
@@ -9,9 +9,8 @@
 <body>
 <h1> Managing conditional breakpoints </h1>
 <p> 
-      An enabling condition can be applied to line breakpoints, exception breakpoints, watchpoints and method breakpoints. When an
-enabling condition is applied to a breakpoint, the breakpoint
-      suspends execution of a thread in one of these cases: </p>
+      An enabling condition can be applied to line breakpoints, so that the
+      breakpoint suspends execution of a thread in one of these cases: </p>
 <ul>
   <li>when the enabling condition is true</li>
   <li>when the enabling condition changes</li>
